changed game name, updated links

--- a/catformer.html
+++ b/catformer.html
@@ -6,7 +6,7 @@
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>kafka.dev/aplatformgame</title>
+    <title>kafka.dev/catformer</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
     <!-- <link rel="stylesheet" href="scrollbar.css"> -->
@@ -18,7 +18,7 @@
 
         <div class="navWindow d-flex flex-column text-center">
             <div class="topBar d-flex justify-content-between align-items-center">
-                <span class="leftBarText">kafka.dev/aplatformgame</span>
+                <span class="leftBarText">kafka.dev/catformer</span>
                 <div class="d-flex">
                     <button class="minButton d-flex m-1 align-items-center justify-content-center">&#95;</button>
                     <button class="maxButton d-flex m-1 align-items-center justify-content-center">&square;</button>
@@ -49,12 +49,12 @@
             </div>
             <canvas id="catVmouseCanvas" width="600" height="400" tabindex="0"></canvas>
         </div>
-        <script src="platformgame.js"></script>
+        <script src="catformer.js"></script>
 
         <div class="popup close-popup" id="how-to-popup" data-popup-id="how-to-popup">
             <div class="popup-content">
                 <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">
-                    kafka.dev/aplatformgame/alert
+                    kafka.dev/catformer/alert
                     <button data-popup-id="how-to-popup"
                         class="close close-popup d-flex m-0 my-0 align-items-center justify-content-center"
                         id="closehow-to-popupButton">&times;</button>
