--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">
                             <div class="d-flex align-items-center">
                                 <!-- <img src="images/Logos/xsmTopBarLogo.png" alt="logo" width="16" height="12"> -->
-                                <div class="d-flex m-1 my-0">kafka.dev/aplatformgame</div>
+                                <div class="d-flex m-1 my-0">kafka.dev/catformer</div>
                             </div>
 
                             <div class="align-items-right">
@@ -53,12 +53,10 @@
                                     class="open-popup xButton d-flex align-items-center justify-content-center">x</button>
                             </div>
                         </h5>
-                        <p class="window-bodyText"> <b>A Platform Game</b> is a exactly what it sounds like. Want
-                            to
-                            play?</p>
+                        <p class="window-bodyText"> <b>Catformer</b> is a simple platform game. Would you like to play?</p>
                     </div>
                     <div class="d-flex flex-column align-items-center justify-content-center">
-                        <button id="pawNGButton" class="okButton" onclick="navLink('platformgame.html')">OK</button>
+                        <button id="pawNGButton" class="okButton" onclick="navLink('catformer.html')">OK</button>
                     </div>
                 </div>
             </div>
@@ -185,7 +183,7 @@
         <div class="popup close-popup" id="xpawNGPopup" data-popup-id="xpawNGPopup">
             <div class="popup-content">
                 <h5 class="topBar custom-windowTitle d-flex justify-content-between p-1">
-                    kafka.dev/aplatformgame/alert
+                    kafka.dev/catformer/alert
                     <button data-popup-id="xpawNGPopup"
                         class="close close-popup d-flex m-0 my-0 align-items-center justify-content-center"
                         id="closexpawNGPopupButton">&times;</button>
