--- a/jsprojects.html
+++ b/jsprojects.html
@@ -47,7 +47,7 @@
                                     <div class="dropdown-content">
                                         <a href="index.html">Home</a>
                                         <a href="about.html">aboutMEow</a>
-                                        <a href="platformgame.html">A Platform Game</a>
+                                        <a href="catformer.html">catformer game</a>
                                         <a href="portfolio.html">Pawtfolio </a>
                                         <!-- <a href="#">Project 3</a> -->
                                     </div>
