--- a/catformer.html
+++ b/catformer.html
@@ -9,8 +9,6 @@
     <title>kafka.dev/catformer</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <!-- <link rel="stylesheet" href="scrollbar.css"> -->
-    <!-- <script src="scrollbar.js"></script> -->
 </head>
 
 <body class="clouds-background">
@@ -47,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <canvas id="catVmouseCanvas" width="600" height="400" tabindex="1"></canvas>
+            <canvas id="catVmouseCanvas" width="600" height="400"></canvas>
         </div>
         <script src="catformer.js"></script>
 
