--- a/catformer.html
+++ b/catformer.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </div>
-            <canvas id="catVmouseCanvas" width="600" height="400"></canvas>
+            <canvas id="catVmouseCanvas" width="600" height="400" tabindex="0"></canvas>
         </div>
         <script src="catformer.js"></script>
 
